# aigen

./: .gitignore  README.md  pyproject.toml
aigen/: __init__.py  brief_commands.py  character_commands.py  character_training_data.py  character_view_models.py  character_view_training_validation.py  character_views.py  cli.py  command_io.py  cpu_status.py  diffusers_kontext_adapter.py  flux_geometry.py  gpu_status.py  image_assets.py  judge_cli.py  keyframe_brief_models.py  keyframe_brief_planner.py  keyframe_briefs.py  keyframe_commands.py  keyframe_control_audit.py  keyframe_examples.py  keyframe_grounding.py  keyframe_image_ops.py  keyframe_job_models.py  keyframe_judge.py  keyframe_memory.py  keyframe_polish.py  keyframe_polish_context.py  keyframe_polish_masks.py  keyframe_polish_models.py  keyframe_polish_planner.py  keyframe_polish_selection.py  keyframe_pose.py  keyframe_profiles.py  keyframe_refine.py  keyframe_refine_models.py  keyframe_refine_worker.py  keyframe_score.py  keyframe_segmentation.py  keyframes.py  (+23 more)
judge_fixtures/: ai46_walk_contact_640x960_ref384_seed_sweep.json
model_sources/: character_pipeline.json  character_pipeline_full_bf16_offload.json  keyframe_generation_kontext_controlnet.json  keyframe_generation_nunchaku_transformer.json  keyframe_grounding_dino.json  keyframe_grounding_florence2.json  keyframe_judge_qwen2_5_vl_7b.json  keyframe_pose_dwpose_onnx.json  keyframe_segmentation_sam_vit_b.json  kontext_pose_control_pipeline_4bit.json  lora_control_audit_nunchaku_transformer.json  nunchaku_kontext_pipeline_fp4.json  pixel_art_pipeline.json  pose_control_pipeline.json  pose_control_pipeline_4bit.json
schemas/: character-view-bank.schema.json  character-view-job.schema.json  keyframe-brief-plan.schema.json  keyframe-brief.schema.json  keyframe-job.schema.json  (+6 more)
(+167 files in other folders)
