[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aigen"
version = "0.1.0"
description = "Private AI character keyframe generation pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Boaz" }]
dependencies = [
  "huggingface_hub>=0.26",
  "numpy>=2",
  "Pillow>=10",
  "pydantic>=2",
  "scipy>=1.18",
]

[project.optional-dependencies]
generation = [
  "accelerate>=1",
  "bitsandbytes>=0.46.1",
  "controlnet-dwpose==0.1.5",
  "controlnet-aux==0.0.10",
  "datasets>=2",
  "diffusers[torch]>=0.38",
  "ftfy",
  "Jinja2",
  "onnxruntime-gpu==1.26.0",
  "peft>=0.17",
  "protobuf",
  "qwen-vl-utils==0.0.8",
  "safetensors>=0.4",
  "segment-anything==1.0",
  "sentencepiece",
  "tensorboard",
  "torch==2.12.1",
  "transformers>=4.44",
  "torchvision==0.27.1",
]

[project.scripts]
aigen = "aigen.cli:main"

[tool.setuptools]
packages = ["aigen", "aigen.generation", "aigen.models"]
